--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="projects">
             <div class="container">
                 <h1 align="center">Projects</h1>
-                <hr size="20" color="black">
+                <hr size="20" color="grey">
                 <p class="lead" align="center">This is a my e-commerce project website that sells modular smartphone (project ara)</p>
                 <div>
                     <center>
