--- a/index.html
+++ b/index.html
@@ -55,19 +55,56 @@
             <div class="container">
                 <h1 align="center">Skills</h1>
                 <hr size="20" color="white">
-                <br><br>
+                <br>
                 <p class="languages" align="center">
-                    <i class="devicon-html5-plain-wordmark icons"></i>
+                    <i class="devicon-html5-plain-wordmark icons"></i> 
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-css3-plain-wordmark icons"></i>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-bootstrap-plain-wordmark icons"></i>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-linux-plain icons"></i>
-                </p>
-                <br><br><br>
-                <p class="languages" align="center">
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-php-plain icons"></i>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-github-plain-wordmark icons"></i>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-mysql-plain-wordmark icons"></i>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                     <i class="devicon-photoshop-line icons"></i>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="90" max="100">90%</progress>
+                    </div>
+                    <br>
                 </p>
                 <br>
             </div>
