--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 align="center">Skills</h1>
                 <hr size="20" color="white">
                 <br>
-                <p class="languages" align="center">
+                <p class="languages">
                     <i class="devicon-html5-plain-wordmark icons"></i> 
                     <br>
                     <div class="progress">
