--- a/index.html
+++ b/index.html
@@ -57,49 +57,49 @@
                 <hr size="20" color="white">
                 <br>
                 <p class="languages">
-                    <i class="devicon-html5-plain-wordmark icons"></i> 
+                    <center><i class="devicon-html5-plain-wordmark icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-css3-plain-wordmark icons"></i>
+                    <center><i class="devicon-css3-plain-wordmark icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-bootstrap-plain-wordmark icons"></i>
+                    <center><i class="devicon-bootstrap-plain-wordmark icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-linux-plain icons"></i>
+                    <center><i class="devicon-linux-plain icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-php-plain icons"></i>
+                    <center><i class="devicon-php-plain icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-github-plain-wordmark icons"></i>
+                    <center><i class="devicon-github-plain-wordmark icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-mysql-plain-wordmark icons"></i>
+                    <center><i class="devicon-mysql-plain-wordmark icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
                     </div>
                     <br>
-                    <i class="devicon-photoshop-line icons"></i>
+                    <center><i class="devicon-photoshop-line icons"></i></center>
                     <br>
                     <div class="progress">
                         <progress class="progress bar" value="90" max="100">90%</progress>
