--- a/index.html
+++ b/index.html
@@ -105,6 +105,24 @@
                         <progress class="progress bar" value="40" max="100">40%</progress>
                     </div>
                     <br>
+                     <center><i class="devicon-java-plain-wordmark icons"></i></center>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="40" max="100">40%</progress>
+                    </div>
+                    <br>
+                    <center><i class="devicon-cplusplus-line-wordmark  icons"></i></center>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="40" max="100">40%</progress>
+                    </div>
+                    <br>
+                    <center><i class="devicon-dot-net-plain-wordmark icons"></i></center>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="30" max="100">30%</progress>
+                    </div>
+                    <br>
                 </p>
                 <br>
             </div>
