--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
                         <progress class="progress bar" value="30" max="100">30%</progress>
                     </div>
                     <br>
+                    <center><i class="devicon-javascript-plain icons"></i></center>
+                    <br>
+                    <div class="progress">
+                        <progress class="progress bar" value="25" max="100">25%</progress>
+                    </div>
+                    <br>
                 </p>
                 <br>
             </div>
