--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="active">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="active">
-                            <a class="nav-link" href="#">Skills</a>
+                            <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="active">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
             </nav>
             </div>
+            <br>
+            <br>
+            <br>
         </div>
-        <br>
-        <div class="projects">
+        <div class="projects" id="projects">
             <div class="container">
                 <h1 align="center">Projects</h1>
                 <hr size="20" color="grey">
@@ -50,7 +52,7 @@
         <br>
         <br>
         <br>
-        <div class="programing_skills">
+        <div class="skills" id="skills">
             <br>
             <div class="container">
                 <h1 align="center">Skills</h1>
@@ -133,8 +135,8 @@
                 <br>
             </div>
         </div>
-        <div class="contact">
-        
+        <div class="contact" id="contact">
+
         </div>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.js"></script>
