--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
-        <div class="intro">
-            <img src="images/background.jpg"  height="100%" width="100%">            
+        <div class="home">
+            <img src="images/background.jpg"  height="100%" width="100%">   
+            <div class="container">
             <div class="carousel-caption text-vertical-center">
                 <img class="img-circle" src="images/profile.jpg" height="250" width="250">
                 <br>
@@ -35,6 +36,7 @@
                         </li>
                     </ul>
             </nav>
+            </div>
             </div>
             <br>
             <br>
