--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <div class="home">
-            <img src="images/background.jpg"  height="100%" width="100%">   
-            <div class="container">
-            <div class="carousel-caption text-vertical-center">
+            <img src="images/background.jpg"  height="100%" width="100%" id="image">   
+            <div class="col-sm-12">
+            <div class="carousel-caption text-vertical-center" id="my-slider" dataride="carousel">
                 <img class="img-circle" src="images/profile.jpg" height="250" width="250">
                 <br>
                 <h1 class="display-3">Portfolio</h1>
