--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <div class="home">
-            <img src="images/background.jpg"  height="100%" width="100%" id="image">   
+            <img src="images/background.jpg" class="img-responsive"  height="100%" width="100%" id="image">   
             <div class="col-sm-12">
-            <div class="carousel-caption text-vertical-center" id="my-slider" dataride="carousel">
-                <img class="img-circle" src="images/profile.jpg" height="250" width="250">
-                <br>
-                <h1 class="display-3">Portfolio</h1>
-                <hr size="20" color="white">
-                <p class="lead">Hello my name is Chinmay Naringrekar, and i'am an aspiring web developer and content creator. I'm remotely working on small web projects and make tech reviews / tutorial videos</p>
-                <hr size="50" color="white">
-                <nav class="navbar navbar-dark bg-faded container navbar-inner">
-                    <ul class="nav navbar-nav">
-                        <li class="active">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="active">
-                            <a class="nav-link" href="#section1">Projects</a>
-                        </li>
-                        <li class="active">
-                            <a class="nav-link" href="#section2">Skills</a>
-                        </li>
-                        <li class="active">
-                            <a class="nav-link" href="#section3">Contact</a>
-                        </li>
-                    </ul>
-            </nav>
-            </div>
+                <div class="carousel-caption text-vertical-center" id="my-slider" dataride="carousel">
+                    <img class="img-circle" src="images/profile.jpg" height="250" width="250">
+                    <br>
+                    <h1 class="display-3">Portfolio</h1>
+                    <hr size="20" color="white">
+                    <p class="lead">Hello my name is Chinmay Naringrekar, and i'am an aspiring web developer and content creator. I'm remotely working on small web projects and make tech reviews / tutorial videos</p>
+                    <hr size="50" color="white">
+                    <nav class="navbar navbar-dark bg-faded container navbar-inner">
+                        <ul class="nav navbar-nav">
+                            <li class="active">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="active">
+                                <a class="nav-link" href="#section1">Projects</a>
+                            </li>
+                            <li class="active">
+                                <a class="nav-link" href="#section2">Skills</a>
+                            </li>
+                            <li class="active">
+                                <a class="nav-link" href="#section3">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <br>
             <br>
