--- a/index.html
+++ b/index.html
@@ -44,24 +44,27 @@
         <div class="container-fluid bg-1 text-center" id="home">
             <h3 class="margin">Hi My Name Is Chinmay</h3>
             <img src="images/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-            <h3>I'm an an aspiring web developer and content creator.</h3>
+            <h3>I'm an aspiring web developer and content creator.</h3>
         </div>
 
 <!-- Second Container -->
         <div class="container-fluid bg-2 text-center" id="what">
-            <h3 class="margin">What I Do?</h3>
-            <p>I'm remotely working on small web projects and make tech reviews / tutorial videos. <br> Here is a video from my channel</p>
-            <div class="embed-responsive embed-responsive-16by9">
-                <center>
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ESxR2TZuCdQ" frameborder="0" allowfullscreen> frameborder="0" allowfullscreen></iframe>
-                </center>
+            <div class="container">
+                <h3 class="margin">What I Do?</h3>
+                <hr size="20" color="white">
+                <p>I'm remotely working on small web projects and make tech reviews / tutorial videos. <br> Here is a video from my channel</p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <center>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ESxR2TZuCdQ" frameborder="0" allowfullscreen> frameborder="0" allowfullscreen></iframe>
+                    </center>
+                </div>
             </div>
         </div>
         <!-- skills -->
         <div class="container-fluid bg-3 text-center" id="skills">
-            <h3 class="margin">My Skills</h3>
-            <hr size="20" color="white">
             <div class="container">
+                <h3 class="margin">My Skills</h3>
+                <hr size="20" color="white">
                 <p class="languages">
                     <center><i class="devicon-html5-plain-wordmark icons"></i></center>
                     <br>
