--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 
 <!-- Third Container (Grid) -->
         <div class="container-fluid bg-4 text-center" id="contact">    
-            <h3 class="margin">Where To Find Me?</h3><br>
             <div class="container">
+                <h3 class="margin">Where To Find Me?</h3>
+                <hr size="20" color="black">
                 <div class="row">
                     <div class="col-xs-6 col-md-3">
                         <a href="https://www.facebook.com/chinmay.2594" class="thumbnail">
