--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <body>
 
 <!-- Navbar -->
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top ">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>                        
@@ -42,6 +43,7 @@
 
 <!-- First Container -->
         <div class="container-fluid bg-1 text-center" id="home">
+            <br><br><br>
             <h3 class="margin">Hi My Name Is Chinmay</h3>
             <img src="images/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
             <h3>I'm an aspiring web developer and content creator.</h3>
