--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 </div>
                 <div class="navbar-collapse collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#home">WHO</a></li>
-                        <li><a href="#what">WHAT</a></li>
-                        <li><a href="#skills">SKILLS</a></li>
-                        <li><a href="#contact">WHERE</a></li>
+                        <li><a class="page-scroll" href="#home">WHO</a></li>
+                        <li><a class="page-scroll" href="#what">WHAT</a></li>
+                        <li><a class="page-scroll" href="#skills">SKILLS</a></li>
+                        <li><a class="page-scroll" href="#contact">WHERE</a></li>
                     </ul>
                 </div>
             </div>
