--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
 <!-- First Container -->
         <div class="container-fluid bg-1 text-center" id="home">
-            <br><br><br><br>
+            <br><br>
             <h3 class="margin">Hi My Name Is Chinmay</h3>
             <img src="images/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-            <h3>I'm an aspiring web developer and content creator.</h3>
+            <h3>I'm an aspiring web developer and content creator.</h3><br><br>
         </div>
 
 <!-- Second Container -->
