--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>I'm remotely working on small web projects and make tech reviews / tutorial videos. <br> Here is a video from my channel</p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <center>
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ESxR2TZuCdQ" frameborder="0" allowfullscreen> frameborder="0" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ESxR2TZuCdQ" frameborder="0" allowfullscreen> frameborder="0" allowfullscreen></iframe><br><br>
                     </center>
                 </div>
             </div>
