--- a/index.html
+++ b/index.html
@@ -67,100 +67,125 @@
                 <h3 class="margin">My Skills</h3>
                 <hr size="20" color="white">
                 <p class="languages">
-                    <center><i class="devicon-html5-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                    <div class="row">
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-html5-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-css3-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-bootstrap-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-linux-plain icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <br>
-                    <center><i class="devicon-css3-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                    <div class="row">
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-php-plain icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-github-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-mysql-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                                </div>
+                            </div>
+                        <br>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-photoshop-line icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <br>
-                    <center><i class="devicon-bootstrap-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                    <div class="row">
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-java-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-cplusplus-line-wordmark  icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-dot-net-plain-wordmark icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-3">
+                            <center><i class="devicon-javascript-plain icons"></i></center>
+                            <br>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                </div>
+                            </div>
+                        </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-xs-6 col-md-3">
+                        <center><i class="devicon-python-plain-wordmark icons"></i></center>
+                        <br>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
+                            </div>
                         </div>
                     </div>
-                    <br>
-                    <center><i class="devicon-linux-plain icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-php-plain icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-github-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-mysql-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-photoshop-line icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-java-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-cplusplus-line-wordmark  icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-dot-net-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-javascript-plain icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                        </div>
-                    </div>
-                    <br>
-                    <center><i class="devicon-python-plain-wordmark icons"></i></center>
-                    <br>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
-                        </div>
-                    </div>
-                    <br>
-                </p>
-            </div>
+                </div>
+            </p>
         </div>
+    </div>
 
 <!-- Third Container (Grid) -->
         <div class="container-fluid bg-4 text-center" id="contact">    
@@ -209,6 +234,18 @@
                         <a href="google.com/+chinmaynaringrekar2594" class="thumbnail">
                             <img src="icons/14_google+.png" alt="...">
                         </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-6 col-md-3">
+                        <center>
+                            <i class="devicon-html5-plain-wordmark icons"></i>
+                        </center>
+                        <br>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
