--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <h3 class="margin">What I Do?</h3>
                 <hr size="20" color="white">
-                <p>I'm remotely working on small web projects and make tech reviews / tutorial videos. <br> Here is a video from my channel</p>
+                <p>I'm remotely working on small web projects and I also make tech reviews / tutorial videos. <br> Here is a video from my channel</p>
                 <div class="embed-responsive embed-responsive-16by9">
                     <center>
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ESxR2TZuCdQ" frameborder="0" allowfullscreen> frameborder="0" allowfullscreen></iframe><br><br>
